--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 .demon-snippet {
-    border: 5px solid red;
+    border: 4px solid rgb(146, 3, 3);
     padding: 20px;
     margin: 20px;
 }
