--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,30 @@ body {
 }
 
 .demon-snippet {
-    border: 4px solid rgb(146, 3, 3);
+    border: 3px solid rgb(146, 3, 3);
     padding: 20px;
     margin: 20px;
+    display: flex;
+}
+
+.snippet-left {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.snippet-right {
+    padding-left: 20px;
+    width: 70%;
 }
 
 p {
     font-size: 14px;
+}
+
+img {
+    float: left;
+    height: 200px;
+    width: auto;
 }
