--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
     background: black;
     color: white;
     padding: 0 190px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     line-height: 1.5;
 }
 
@@ -26,13 +26,17 @@ body {
     justify-content: center;
 }
 
+h3 {
+    font-family: 'Times New Roman', Times, serif;
+}
+
 .snippet-right {
     padding-left: 20px;
     width: 70%;
 }
 
 p {
-    font-size: 13px;
+    font-size: 14px;
 }
 
 img {
