--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ body {
 
 h3 {
     font-family: 'Times New Roman', Times, serif;
+
 }
 
 .snippet-right {
@@ -54,7 +55,8 @@ img {
 }
 
 a {
-    color: rgb(116, 116, 230)
+    color: rgb(116, 116, 230);
+    text-decoration: none;
 }
 
 .demon-description {
