finished formatting -still need to align lists

--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,12 @@ h2 {
 li {
     font-size: 14px;
 }
+
+.double-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    font-size: 14px;
+}
+
+
+
