--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 h1 {
     text-align: center;
+    font-family: 'Noticia Text', serif;
+}
+
+h3 {
+font-family: 'Noticia Text', serif;
 }
 
 .demon-list {
@@ -94,7 +99,7 @@ a {
 h2 {
     text-align: center;
     color: rgb(250, 113, 113);
-    font-family: Georgia;
+    font-family: 'Noticia Text', serif;
 }
 
 .description {
